# axum-api

./: Cargo.toml  README.md
complete/: .env  Cargo.toml
complete/deploy/: Dockerfile  deploy.sh  docker-compose.yml
complete/migrations/: 20241115163142_init.sql
complete/src/: lib.rs  main.rs
complete/src/controllers/message/: message_ctrl.rs  message_models.rs
complete/src/controllers/profile/: profile_ctrl.rs  profile_models.rs
complete/src/lib/: app_state.rs
complete/src/repository/: repo.rs
complete/src/repository/follow/: follow_models.rs  follow_repo.rs
complete/src/repository/message/: message_models.rs  message_repo.rs
complete/src/repository/profile/: profile_models.rs  profile_repo.rs
complete/src/routes/lib/: app_response.rs
complete/src/routes/message/: message_rt.rs
complete/src/routes/profile/: profile_rt.rs
complete/src/testing/: fixtures.rs
complete/tests/: mod.rs
complete/tests/routes/message/: message_rt.rs  message_rt_test.rs
complete/tests/routes/profile/: profile_rt_test.rs
response/: Cargo.toml
sqlx/: Cargo.toml
start/: Cargo.toml
start/src/: main.rs
start/src/controllers/lib/: response.rs
