[package]
name = "complete"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
async-trait = "0.1.83"
assert_matches = "1.5.0"
axum = { version = "0.7.7", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
fake = { version = "3.0.1", features=['derive']}
http = "1.1.0"
hyper = "1.5.0"
mockall = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.1", features = ["full"] }
tokio-test = "0.4.4"